# fst-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  aliases.js  search-index.js  settings.html  source-files.js
benches/: bench.rs
ci/: pr-check-fix.sh
criterion/[6d87c1b] 1+1 10000 times/16384/base/: estimates.json  raw.csv
criterion/[6d87c1b] 1+1 10000 times/16384/new/: benchmark.json  sample.json  tukey.json
criterion/[6d87c1b] 1+1 10000 times/16384/report/: index.html
criterion/[6d87c1b] 1+1 10000 times/2048/base/: estimates.json  sample.json  tukey.json
criterion/[6d87c1b] 1+1 10000 times/2048/new/: benchmark.json  raw.csv
criterion/[6d87c1b] 1+1 10000 times/2048/report/: index.html
criterion/[6d87c1b] 1+1 10000 times/32768/base/: estimates.json  raw.csv  sample.json
criterion/[6d87c1b] 1+1 10000 times/32768/new/: benchmark.json  tukey.json
criterion/[6d87c1b] 1+1 10000 times/32768/report/: index.html
criterion/[6d87c1b] 1+1 10000 times/4096/base/: benchmark.json  tukey.json
criterion/[6d87c1b] 1+1 10000 times/4096/new/: estimates.json  raw.csv  (+1 more)
criterion/[6d87c1b] 1+1 10000 times/report/: index.html
criterion/report/: index.html
fst_rs/: all.html  index.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
src/: fst.rs  lib.rs
src/fst/: fst.rs  fst_builder.rs
src/fst_rs/: lib.rs.html
tests/: test.rs
(+7 files in other folders)
